--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "jwks-rsa": "^3.1.0",
     "keycloak-connect": "^26.0.6",
     "nest-keycloak-connect": "^1.10.1",
     "passport-jwt": "^4.0.1",
